--- a/package/package.json
+++ b/package/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^16.0.1",
     "@angular/platform-browser-dynamic": "^16.0.1",
     "@angular/router": "^16.0.1",
+    "@angular/service-worker": "^16.0.1",
     "angular-tabler-icons": "^2.18.0",
     "apexcharts": "^3.40.0",
+    "firebase": "^10.7.1",
     "ng-apexcharts": "1.7.6",
     "ngx-scrollbar": "^11.0.0",
     "rxjs": "~7.8.0",
